// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatUserData: Basic PR data transfers to result 1`] = `
[
  {
    'age': 0,
    'approvalsByUser': {},
    'approvalsGiven': 0,
    'approvalsReceived': 1,
    'author': 'bob',
    'codeCommentsGiven': 0,
    'codeCommentsReceived': 3,
    'commentsByUser': {},
    'commentsGiven': 0,
    'commentsReceived': 2,
    'generalCommentsGiven': 0,
    'generalCommentsReceived': 4,
    'name': 'bob',
    'orgCount': 1,
    'prSize': 0,
    'prTotalAdditions': 0,
    'prTotalAge': 0,
    'prTotalDeletions': 0,
    'repoCount': 1,
    'sentimentAverageNegativeScore': 0,
    'sentimentAveragePositiveScore': 0,
    'sentimentTotalNegativeScore': 0,
    'sentimentTotalPositiveScore': 0,
    'totalPRs': 1,
    'uniquePRsContributedTo': 0,
    'user': 'bob',
  },
]
`;

exports[`formatUserData: PR data from two authors with no contributors to match snapshot 1`] = `
[
  {
    'age': 0,
    'approvalsByUser': {},
    'approvalsGiven': 0,
    'approvalsReceived': 0,
    'author': 'bob',
    'codeCommentsGiven': 0,
    'codeCommentsReceived': 0,
    'commentsByUser': {},
    'commentsGiven': 0,
    'commentsReceived': 0,
    'generalCommentsGiven': 0,
    'generalCommentsReceived': 0,
    'name': 'bob',
    'orgCount': 1,
    'prSize': 0,
    'prTotalAdditions': 0,
    'prTotalAge': 0,
    'prTotalDeletions': 0,
    'repoCount': 1,
    'sentimentAverageNegativeScore': 0,
    'sentimentAveragePositiveScore': 0,
    'sentimentTotalNegativeScore': 0,
    'sentimentTotalPositiveScore': 0,
    'totalPRs': 2,
    'uniquePRsContributedTo': 0,
    'user': 'bob',
  },
  {
    'age': 0,
    'approvalsByUser': {},
    'approvalsGiven': 0,
    'approvalsReceived': 0,
    'author': 'smith',
    'codeCommentsGiven': 0,
    'codeCommentsReceived': 0,
    'commentsByUser': {},
    'commentsGiven': 0,
    'commentsReceived': 0,
    'generalCommentsGiven': 0,
    'generalCommentsReceived': 0,
    'name': 'smith',
    'orgCount': 1,
    'prSize': 0,
    'prTotalAdditions': 0,
    'prTotalAge': 0,
    'prTotalDeletions': 0,
    'repoCount': 1,
    'sentimentAverageNegativeScore': 0,
    'sentimentAveragePositiveScore': 0,
    'sentimentTotalNegativeScore': 0,
    'sentimentTotalPositiveScore': 0,
    'totalPRs': 1,
    'uniquePRsContributedTo': 0,
    'user': 'smith',
  },
]
`;
